css/style.css
body {
    margin: 0;
    background: url(/img/bg.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    justify-content: center;
}

@font-face {
    font-family: Norse-Bold;
    src: url(../font/Norse-Bold.otf);
}

.left-side {
    width: 35vw;
}

.logo {
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    margin-top: 20vh;
    align-items: center;
}

.logo-img img{
    width: 6rem;
    height: auto;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.logo-text {
    font-family: Norse-Bold, sans-serif;
    font-size: 6rem;
    text-align: center;
    color: white;
}

.logo-text p {
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.right-side {
    display: flex;
    flex-direction: column;
    width: 65vw;
    height: auto;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.first-container {
    background-color: rgb(240, 240, 240);
    font-size: 1.5rem;
    font-weight: bold;
    padding-left: 2.5vw;
    padding-top: 12vh;
    padding-bottom: 5.5vh;
}

.second-container {
    background-color: white;
    padding-left: 2.5vw;
    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
}

.fieldset-container {
    display: flex;
}

.fieldset label{
    display: block;
    font-size: 0.9rem;
    margin-bottom: 2px;
}

input {
    height: 1.5rem;
    border-radius: 6px;
    border: 1px solid grey;
    margin-bottom: 32px;
    margin-right: 64px;
}

input:focus {
    outline: 0;
    border: 1px solid #ff008d;
    box-shadow: 2px 2px 6px grey;
}

button[type="submit"] {
    position: absolute;
    margin-top: 32px;
    color: white;
    background-color: #ff008d;
    border-radius: 8px;
    border: none;
    padding: 12px 40px;
    font-size: 1rem;
    font-weight: bold;
    box-shadow: 2px 2px 6px grey;
}

.third-container {
    background-color: rgb(240, 240, 240);
    padding-left: 2.5vw;
    padding-top: 80px;
    height: 23.5vh;
}

.third-container a {
    text-decoration: none;
    color: #ff008d;
}

